<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00F7FBFB"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#985858"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="center"
            android:text="@string/txt_sms_for_cliant"
            android:textColor="@color/white"
            android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSMS"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/back2"
                android:gravity="top|start"
                android:hint="@string/txt_message"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />

        <EditText
            android:id="@+id/editDelay"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginVertical="8dp"
            android:background="@drawable/back1"
            android:gravity="center"
            android:hint="@string/txt_secund"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:paddingVertical="8dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/txt_save"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/txt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/txt_note_text"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>